--- a/packages/inbound-email-handler/package.json
+++ b/packages/inbound-email-handler/package.json
@@ -29,9 +29,9 @@
   "dependencies": {
     "@google-cloud/functions-framework": "3.1.2",
     "@google-cloud/pubsub": "^2.18.4",
+    "@omnivore/content-handler": "file:./../content-handler",
     "@sendgrid/client": "^7.6.0",
     "@sentry/serverless": "^6.16.1",
-    "@omnivore/content-handler": "1.0.0",
     "addressparser": "^1.0.1",
     "axios": "^0.27.2",
     "jsonwebtoken": "^8.5.1",
