--- a/packages/inbound-email-handler/package.json
+++ b/packages/inbound-email-handler/package.json
@@ -29,7 +29,7 @@
   "dependencies": {
     "@google-cloud/functions-framework": "3.1.2",
     "@google-cloud/pubsub": "^2.18.4",
-    "@omnivore/content-handler": "file:./content-handler",
+    "@omnivore/content-handler": "file:./../content-handler",
     "@sendgrid/client": "^7.6.0",
     "@sentry/serverless": "^6.16.1",
     "addressparser": "^1.0.1",
