--- a/packages/inbound-email-handler/package.json
+++ b/packages/inbound-email-handler/package.json
@@ -25,12 +25,13 @@
     "@types/node": "^14.11.2",
     "@types/rfc2047": "^2.0.1",
     "chai": "^4.3.6",
-    "eslint-plugin-prettier": "^4.0.0"
+    "eslint-plugin-prettier": "^4.0.0",
+    "mocha": "^10.0.0"
   },
   "dependencies": {
     "@google-cloud/functions-framework": "3.1.2",
     "@google-cloud/pubsub": "^2.18.4",
-    "@omnivore/content-handler": "file:./../content-handler",
+    "@omnivore/content-handler": "1.0.0",
     "@sendgrid/client": "^7.6.0",
     "@sentry/serverless": "^6.16.1",
     "addressparser": "^1.0.1",
