--- a/packages/puppeteer-parse/package.json
+++ b/packages/puppeteer-parse/package.json
@@ -7,7 +7,7 @@
     "@google-cloud/functions-framework": "^3.1.2",
     "@google-cloud/logging-winston": "^5.1.1",
     "@google-cloud/storage": "^5.18.1",
-    "@omnivore/content-handler": "file:./../content-handler",
+    "@omnivore/content-handler": "1.0.0",
     "@sentry/serverless": "^6.13.3",
     "axios": "^0.27.2",
     "chrome-aws-lambda": "^10.1.0",
