--- a/packages/pdf-handler/package.json
+++ b/packages/pdf-handler/package.json
@@ -20,7 +20,10 @@
     "deploy": "yarn build && yarn gcloud-deploy"
   },
   "devDependencies": {
-    "@types/node": "^14.11.2"
+    "@types/node": "^14.11.2",
+    "chai": "^4.3.6",
+    "chai-string": "^1.5.0",
+    "mocha": "^10.0.0"
   },
   "dependencies": {
     "@google-cloud/functions-framework": "3.1.2",
