Exposes port 9090:8080 in the container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -140,8 +140,8 @@ services:
       context: .
       dockerfile: ./packages/content-fetch/Dockerfile-local
     container_name: "omnivore-content-fetch"
-    expose:
-      - 9090
+    ports:
+      - "9090:8080"
     environment:
       - JWT_SECRET=some_secret
       - VERIFICATION_TOKEN=some_token
