Remove content-fetch-gcf and create a Dockerfile for the cloud function

--- a/packages/content-fetch/.env.example
+++ b/packages/content-fetch/.env.example
@@ -6,3 +6,13 @@ REST_BACKEND_ENDPOINT=http://localhost:4000/api
 
 # set for local development
 IS_LOCAL=true
+
+VERIFICATION_TOKEN='123456'
+
+CHROMIUM_PATH=/opt/homebrew/bin/chromium
+PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true
+LAUNCH_HEADLESS=true
+
+TWITTER_BEARER_TOKEN=token
+
+PORT=9090
