--- a/packages/content-fetch/package.json
+++ b/packages/content-fetch/package.json
@@ -4,7 +4,6 @@
   "description": "Service that fetches page content from a URL",
   "main": "index.js",
   "dependencies": {
-    "@omnivore/content-handler": "1.0.0",
     "axios": "^0.27.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -13,9 +12,18 @@
     "luxon": "^2.3.1",
     "puppeteer-core": "^16.1.0",
     "underscore": "^1.13.4",
-    "@omnivore/puppeteer-parse": "^1.0.0"
+    "@omnivore/puppeteer-parse": "^1.0.0",
+    "@google-cloud/logging-winston": "^4.1.2",
+    "@google-cloud/storage": "^5.18.1",
+    "@sentry/serverless": "^6.13.3",
+    "winston": "^3.3.3"
+  },
+  "devDependencies": {
+    "@google-cloud/functions-framework": "^3.0.0"
   },
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "start_gcf": "npx functions-framework --port=9090 --target=puppeteer",
+    "start_preview": "npx functions-framework --target=preview"
   }
 }
