--- a/packages/content-fetch/package.json
+++ b/packages/content-fetch/package.json
@@ -4,26 +4,21 @@
   "description": "Service that fetches page content from a URL",
   "main": "index.js",
   "dependencies": {
-    "axios": "^0.27.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "linkedom": "^0.14.9",
-    "luxon": "^2.3.1",
-    "puppeteer-core": "^16.1.0",
-    "underscore": "^1.13.4",
     "@omnivore/puppeteer-parse": "^1.0.0",
-    "@google-cloud/logging-winston": "^4.1.2",
-    "@google-cloud/storage": "^5.18.1",
-    "@sentry/serverless": "^6.13.3",
-    "winston": "^3.3.3"
+    "@sentry/serverless": "^6.13.3"
   },
   "devDependencies": {
-    "@google-cloud/functions-framework": "^3.0.0"
+    "@google-cloud/functions-framework": "^3.0.0",
+    "chai": "^4.3.6",
+    "chai-string": "^1.5.0",
+    "mocha": "^10.0.0"
   },
   "scripts": {
     "start": "node app.js",
     "start_gcf": "npx functions-framework --port=9090 --target=puppeteer",
-    "start_preview": "npx functions-framework --target=preview"
+    "start_preview": "npx functions-framework --target=preview",
+    "test": "mocha test/*.js"
   }
 }
