--- a/packages/puppeteer-parse/package.json
+++ b/packages/puppeteer-parse/package.json
@@ -14,5 +14,12 @@
     "puppeteer-core": "^16.1.0",
     "underscore": "^1.13.4",
     "winston": "^3.3.3"
+  },
+  "devDependencies": {
+    "chai": "^4.3.6",
+    "mocha": "^10.0.0"
+  },
+  "scripts": {
+    "test": "mocha test/*.js"
   }
 }
