--- a/packages/api/Dockerfile
+++ b/packages/api/Dockerfile
@@ -41,6 +41,7 @@ ENV NODE_OPTIONS=--max-old-space-size=4096
 ENV PORT=8080
 
 COPY --from=builder /app/packages/api/dist /app/packages/api/dist
+COPY --from=builder /app/packages/api/dist /app/packages/api/dist
 COPY --from=builder /app/packages/readabilityjs/ /app/packages/readabilityjs/
 COPY --from=builder /app/packages/api/package.json /app/packages/api/package.json
 COPY --from=builder /app/packages/api/node_modules /app/packages/api/node_modules
@@ -48,6 +49,7 @@ COPY --from=builder /app/node_modules /app/node_modules
 COPY --from=builder /app/package.json /app/package.json
 COPY --from=builder /app/packages/text-to-speech/ /app/packages/text-to-speech/
 COPY --from=builder /app/packages/content-handler/ /app/packages/content-handler/
+COPY --from=builder /app/packages/api/src/services/popular_reads /app/packages/api/dist/services/popular_reads
 EXPOSE 8080
 
 CMD ["yarn", "workspace", "@omnivore/api", "start"]
