Add highlightPositionPercent and highlightPositionAnchorIndex in highlight api

--- a/packages/db/elastic_migrations/index_settings.json
+++ b/packages/db/elastic_migrations/index_settings.json
@@ -111,6 +111,12 @@
                 "type": "date"
               }
             }
+          },
+          "highlightPositionPercent": {
+            "type": "float"
+          },
+          "highlightPositionAnchorIndex": {
+            "type": "integer"
           }
         }
       },
