--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -43,6 +43,7 @@
     "react-apple-login": "^1.1.3",
     "react-colorful": "^5.5.1",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.1.1",
     "react-masonry-css": "^1.0.16",
     "react-pro-sidebar": "^0.7.1",
