--- a/packages/notification/package.json
+++ b/packages/notification/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@google-cloud/functions-framework": "3.1.2",
     "@google-cloud/pubsub": "^3.2.1",
+    "dotenv": "^16.0.1",
     "firebase-admin": "^10.0.2",
     "@sentry/serverless": "^6.16.1"
   }
