Create rule handler cloud run

--- a/packages/rule-handler/Dockerfile
+++ b/packages/rule-handler/Dockerfile
@@ -8,19 +8,19 @@ COPY yarn.lock .
 COPY tsconfig.json .
 COPY .eslintrc .
 
-COPY /packages/notification/package.json ./packages/notification/package.json
+COPY /packages/rule-handler/package.json ./packages/rule-handler/package.json
 
 RUN yarn install --pure-lockfile
 
-ADD /packages/notification ./packages/notification
-RUN yarn workspace @omnivore/notification build
+ADD /packages/rule-handler ./packages/rule-handler
+RUN yarn workspace @omnivore/rule-handler build
 
 # After building, fetch the production dependencies
-RUN rm -rf /app/packages/notification/node_modules
+RUN rm -rf /app/packages/rule-handler/node_modules
 RUN rm -rf /app/node_modules
 RUN yarn install --pure-lockfile --production
 
 EXPOSE 8080
 
-CMD ["yarn", "workspace", "@omnivore/notification", "start"]
+CMD ["yarn", "workspace", "@omnivore/rule-handler", "start"]
 
