--- a/packages/rule-handler/package.json
+++ b/packages/rule-handler/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@omnivore/notification",
+  "name": "@omnivore/rule-handler",
   "version": "1.0.0",
   "main": "build/src/index.js",
   "files": [
@@ -11,9 +11,9 @@
     "lint": "eslint src --ext ts,js,tsx,jsx",
     "compile": "tsc",
     "build": "tsc",
-    "start": "functions-framework --target=notification",
+    "start": "functions-framework --target=ruleHandler",
     "dev": "concurrently \"tsc -w\" \"nodemon --watch ./build/ --exec npm run start\"",
-    "gcloud-deploy": "gcloud functions deploy notification --gen2 --entry-point=notification --trigger-http --allow-unauthenticated --region=us-west2 --runtime nodejs14",
+    "gcloud-deploy": "gcloud functions deploy rule-handler --gen2 --entry-point=ruleHandler --trigger-http --allow-unauthenticated --region=us-west2 --runtime nodejs14",
     "deploy": "yarn build && yarn gcloud-deploy"
   },
   "devDependencies": {
@@ -23,9 +23,10 @@
   },
   "dependencies": {
     "@google-cloud/functions-framework": "3.1.2",
-    "@google-cloud/pubsub": "^3.2.1",
     "dotenv": "^16.0.1",
     "firebase-admin": "^10.0.2",
-    "@sentry/serverless": "^6.16.1"
+    "@sentry/serverless": "^6.16.1",
+    "typeorm": "^0.3.4",
+    "typeorm-naming-strategies": "^4.1.0"
   }
 }
