--- a/packages/rule-handler/tsconfig.json
+++ b/packages/rule-handler/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@tsconfig/node14/tsconfig.json",
+  "extends": "./../../tsconfig.json",
   "compilerOptions": {
     "outDir": "build",
     "rootDir": ".",
