Add docker-compose service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -149,3 +149,21 @@ services:
     depends_on:
       api:
         condition: service_healthy
+
+  rule-handler:
+    build:
+      context: .
+      dockerfile: ./packages/rule-handler/Dockerfile
+    container_name: "omnivore-rule-handler"
+    ports:
+      - "9091:8080"
+    environment:
+      - PUBSUB_VERIFICATION_TOKEN=some_token
+      - PG_HOST=postgres
+      - PG_PORT=5432
+      - PG_USER=app_user
+      - PG_PASSWORD=app_pass
+      - PG_DB=omnivore
+    depends_on:
+      migrate:
+        condition: service_completed_successfully
