--- a/packages/rule-handler/package.json
+++ b/packages/rule-handler/package.json
@@ -12,9 +12,7 @@
     "compile": "tsc",
     "build": "tsc",
     "start": "functions-framework --target=ruleHandler",
-    "dev": "concurrently \"tsc -w\" \"nodemon --watch ./build/ --exec npm run start\"",
-    "gcloud-deploy": "gcloud functions deploy rule-handler --gen2 --entry-point=ruleHandler --trigger-http --allow-unauthenticated --region=us-west2 --runtime nodejs14",
-    "deploy": "yarn build && yarn gcloud-deploy"
+    "dev": "concurrently \"tsc -w\" \"nodemon --watch ./build/ --exec npm run start\""
   },
   "devDependencies": {
     "chai": "^4.3.6",
@@ -26,6 +24,7 @@
     "dotenv": "^16.0.1",
     "firebase-admin": "^10.0.2",
     "@sentry/serverless": "^6.16.1",
+    "pg": "^8.3.3",
     "typeorm": "^0.3.4",
     "typeorm-naming-strategies": "^4.1.0"
   }
