--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -24,9 +24,9 @@
     "@radix-ui/react-dropdown-menu": "^0.1.6",
     "@radix-ui/react-id": "^0.1.1",
     "@radix-ui/react-popover": "^0.1.1",
+    "@radix-ui/react-progress": "^1.0.1",
     "@radix-ui/react-separator": "^0.1.0",
     "@radix-ui/react-tooltip": "^0.1.7",
-    "@ramonak/react-progress-bar": "^5.0.3",
     "@segment/analytics-next": "^1.33.5",
     "@sentry/nextjs": "^6.16.1",
     "@stitches/react": "^1.2.5",
