Parse subscription filter in rules

--- a/packages/rule-handler/package.json
+++ b/packages/rule-handler/package.json
@@ -25,6 +25,7 @@
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "firebase-admin": "^10.0.2",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "search-query-parser": "^1.6.0"
   }
 }
